# bunker

./: .dockerignore  .gitignore  pyproject.toml  requirements.txt
bunker/: ,gitignore  db.sqlite3  manage.py
bunker/bunker/: .env  asgi.py  settings.py  urls.py  wsgi.py
bunker/game/: urls.py  views.py
bunker/game/templates/: index.html
myproject/: settings.py  urls.py
users/: models.py  urls.py  views.py
users/migrations/: 0001_initial.py
