[tool.poetry]
name = "bunker"
version = "0.1.0"
description = "for my game/pet project 'bunker'"
authors = ["Shevik11 <maksshevchuk621@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
