[tool.poetry]
name = "bunker"
version = "0.1.0"
description = ""
authors = ["Shevik11 <maksshevchuk621@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-environ = "^0.11.2"
virtualenv = "^20.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
